--- a/src/main/webapp/WEB-INF/view/react/public/index.html
+++ b/src/main/webapp/WEB-INF/view/react/public/index.html
@@ -15,7 +15,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Spring Login - React App</title>
+    <title>CV Monitoring Application</title>
   </head>
   <body>
     <noscript>
